tests/auto/qmlls/utils/data/highlights/invalid/highlightsShift_withComments_del.qml
import QtQuick


// This is a comment line
// Another comment line